<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundtake2"
    tools:context=".WelcomePage">

    <TextView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="134dp"
        android:fontFamily="@font/bold"
        android:gravity="center_horizontal"
        android:text="@string/how_to_use_choremates"
        android:textAlignment="center"
        android:textColor="@color/darkgreen"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="28dp"
        android:layout_height="25dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="234dp"
        android:fontFamily="@font/regular"
        android:gravity="center_horizontal"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="28dp"
        android:layout_height="25dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="302dp"
        android:fontFamily="@font/regular"
        android:gravity="center_horizontal"
        android:text="@string/_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="28dp"
        android:layout_height="25dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="369dp"
        android:fontFamily="@font/regular"
        android:gravity="center_horizontal"
        android:text="@string/_3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="296dp"
        android:layout_height="62dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="226dp"
        android:fontFamily="@font/regular"
        android:text="@string/create_your_own_personal_profile_that_differs_from_the_other_roommates"
        android:textColor="@color/darkgreen"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="296dp"
        android:layout_height="62dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/regular"
        android:text="@string/use_the_chore_pages_to_add_chores_to_your_list_and_keep_up_with_your_chores"
        android:textColor="@color/darkgreen"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="296dp"
        android:layout_height="30dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="302dp"
        android:fontFamily="@font/regular"
        android:text="@string/add_and_create_chores_to_the_calendar"
        android:textColor="@color/darkgreen"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="182dp"
        android:layout_height="47dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/buttonwelcome"
        android:fontFamily="@font/bold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/darkgreen"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993" />

</androidx.constraintlayout.widget.ConstraintLayout>
